@@ -62,11 +62,6 @@
       <version>1.3.2</version>
     </dependency>
     <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
-    </dependency>
-    <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.2</version>
@@ -82,12 +77,7 @@
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-stax-api_1.0_spec</artifactId>
       <version>1.0.1</version>
-    </dependency>
-    <dependency>
-      <groupId>stax-utils</groupId>
-      <artifactId>stax-utils</artifactId>
-      <version>snapshot-20040917</version>
-    </dependency>
+    </dependency>   
 
   </dependencies>
 
