@@ -16,7 +16,6 @@ package org.apache.solr.handler;
  * limitations under the License.
  */
 
-import javanet.staxutils.BaseXMLInputFactory;
 import org.apache.commons.io.IOUtils;
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.analysis.Token;
@@ -60,7 +59,7 @@ public class AnalysisRequestHandler extends RequestHandlerBase {
   public void init(NamedList args) {
     super.init(args);
 
-    inputFactory = BaseXMLInputFactory.newInstance();
+    inputFactory = XMLInputFactory.newInstance();
     try {
       // The java 1.6 bundled stax parser (sjsxp) does not currently have a thread-safe
       // XMLInputFactory, as that implementation tries to cache and reuse the
